# grammared-language

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  QUICKSTART.md  README.md  constraints.txt  demo-docker-compose.yml  docker-compose-yml  docker-compose.yml  example_config.yaml  example_model_config.yaml  model_config.yaml  pyproject.toml  pytest.ini  requirements.txt.example  test_model_config.yaml
.github/workflows/: python-publish.yml  unit-tests  unit-tests.yml
api/: README.md  requirements.txt
api/src/: GRPC_README.md  generate_grpc.py  grpc_server.py  ml_server.proto  output_models.py  requirements_grpc.txt  server.py  test_grpc_endpoint.py  test_server_request.py  util.py
api/src/grpc_gen/: README.md  __init__.py  grammar_check_pb2_grpc.py  ml_server_pb2.pyi  ml_server_pb2_grpc.py
api/src/models/: base_model.py  gector.py
api/tests/: test_grammar_correction_extractor.py  test_grpc_endpoint.py  test_server_request.py
bechmark/: throughput_test.py
config/: README.md
config/api/: config.example.yaml
config/triton/: config.example.pbtxt
docker/: README.md  default_model_config.yaml
docker/api/: Dockerfile  Dockerfile-gpu
docker/requirements/: base.txt  gpu.txt  triton-arm.txt  triton.txt
docker/triton/: Dockerfile  Dockerfile-arm  Dockerfile-gpu  build_repo.py  default_model_config.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  HUGGINGFACE_MODELS.md  LANGUAGETOOL_INTEGRATION.md  MODELS.md  PROJECT_SETUP_SUMMARY.md  README.md
example_language_tool_configs/: remote-rule-config.json  server.properties
examples/: text2text_client_example.py
grammared_language/: __init__.py
grammared_language/api/: __init__.py  generate_grpc.py  util.py
grammared_language/api/grpc_gen/: __init__.py  ml_server_pb2.py
grammared_language/clients/: __init__.py  async_multi_client.py  base_client.py  coedit_client.py  gector_client.py  grammar_classification_client.py  text2text_base_client.py
grammared_language/grammared_classifier/: __init__.py  classifier_pipeline.py  grammared_classifier_model.py
grammared_language/language_tool/: __init__.py  output_models.py
grammared_language/triton/: __init__.py  triton_builder.py  triton_gector_model.py  triton_grammared_classifier_model.py  triton_text2text_model.py  triton_transformers_model.py
grammared_language/triton/builder/: __init__.py  data_model.py  repo_builder.py
grammared_language/triton/builder/triton_templates/: gector.config.pbtxt.jinja  gector_config.pbtxt.jinja  grammared_classifier.config.pbtxt.jinja  grammared_classifier.model.py.jinja  text2text.config.pbtxt.jinja  text2text.model.py.jinja
grammared_language/triton/triton_templates/: gector_config.pbtxt.jinja
grammared_language/utils/: __init__.py  config_parser.py  errant_grammar_correction_extractor.py  grammar_correction_extractor.py
models/: README.md
tests/: README.md  conftest.py
tests/api/: test_grpc_server.py  test_health_check_docker.py  test_health_check_integration.py  test_health_check_unit.py
tests/clients/: test_async_multi_client.py  test_async_multi_client_functional.py  test_coedit_client.py  test_gector_client.py  test_grammar_classification_client.py  test_grammar_classification_client_functional.py  test_text2text_base_client.py
tests/functional/: __init__.py  test_triton_classifier.py
tests/grammared_classifier/: test_classifier_functional.py  test_classifier_pipeline.py  test_grammared_classifier_model.py
tests/integration/: __init__.py  test_grpc_server.py
tests/triton/: test_triton_classifier.py  test_triton_gector.py  test_triton_rest_api.py
tests/unit/: __init__.py
tests/utils/: test_config_parser.py  test_errant_grammar_correction_extractor.py  test_grammar_correction_extractor.py
triton_server/: README.md  TESTING.md  requirements.txt
triton_server/example_model_repository/coedit_large/: config.pbtxt
triton_server/example_model_repository/coedit_large/1/: model.py
triton_server/example_model_repository/gector_bert/: config.pbtxt
triton_server/example_model_repository/gector_deberta_large/: config.pbtxt
triton_server/example_model_repository/gector_deberta_large/1/: model.py
triton_server/example_model_repository/grammared_classifier/: config.pbtxt
triton_server/example_model_repository/grammared_classifier/1/: model.py
triton_server/model_repo/gector_deberta_large/1/: gector.py
triton_server/model_repo/smollm2_135m/: config.pbtxt
triton_server/model_repo/smollm2_135m/1/: model.py
triton_server/model_repository/: config.pbtxt.example
triton_server/model_repository/gector_bert/: config.pbtxt
triton_server/model_repository/gector_bert/1/: gector.py  model.py
triton_server/model_repository/gector_deberta_large/: config.pbtxt
triton_server/model_repository/gector_deberta_large/1/: model.py
triton_server/model_repository/gector_roberta/: README.md  config.pbtxt
triton_server/model_repository/gector_roberta/1/: model.py
triton_server/model_repository/grammared_classifier/: config.pbtxt
triton_server/model_repository/grammared_classifier/1/: __init__.py  model.py  pipeline.py
triton_server/model_repository/smollm2_135m/: config.pbtxt
triton_server/scripts/: deploy_gector.sh  deploy_grammared_classifier.sh  deploy_model.sh.example  quick_test.sh  test_gector.py  test_grammared_classifier.py  test_grammared_classifier_curl.sh  test_grammared_classifier_example.py
