[project]
name = "grammared-language"
version = "0.1.0"
description = "Grammar error correction backend with Triton and FastAPI/ GRPC integration"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Ray Liu", email = "ray@rayliu.ca" } ]

# Core runtime dependencies (keep minimal; extras provide larger optional deps)
dependencies = [
  "numpy",
  "pydantic",
  "openai",
  "jinja2>=3.1.6",
  "transformers[torch]>=4.0.0",
  "scikit-learn",
  "tritonclient[all]",
  "gector",
  "fastapi>=0.128.0",
  "errant>=3.0.0",
  "pip>=25.3",
]

[project.optional-dependencies]
api = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "grpcio",
  "grpcio-tools",
  "protobuf",
  "pydantic",
]
triton = [
  "transformers>=4.30.0",
  "accelerate",
  "sentencepiece",
  "protobuf",
  "numpy",
  "optimum[onnxruntime-gpu]",
  "onnxruntime",
  "onnx",
  "bitsandbytes"
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "pre-commit>=3.0.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "requests>=2.28.0",
]
all = [
  "grammared-language[api,triton,dev,test]"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grammared_language*"]

[tool.setuptools.package-data]
grammared_language = [
  "triton/builder/triton_templates/*.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-v"]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require services (gRPC, API)",
    "functional: Functional tests for Triton models",
    "slow: Tests that take a long time to run",
    "requires_triton: Tests that require Triton server",
    "requires_grpc: Tests that require gRPC server",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.uv.sources]
gector = { git = "https://github.com/rayliuca/gector" }
