[project]
name = "grammared-language"
version = "0.1.0"
description = "Grammar error correction backend with Triton and FastAPI/ GRPC integration"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Ray Liu", email = "ray@rayliu.ca" } ]

# Core runtime dependencies (keep minimal; extras provide larger optional deps)
dependencies = [
  "pip>=25.3",
  "pydantic",
  "openai",
  "jinja2>=3.1.6",
  "transformers>=4.30.0",
  "scikit-learn",
  "tritonclient[grpc]",
  "gector",
  "fastapi>=0.128.0",
  "errant>=3.0.0",
  "uvicorn",
  "grpcio",
  "grpcio-tools",
  "protobuf==4.25.8",
  "torch",
  "numpy"
]

[project.optional-dependencies]

# fix dependencies in docker
docker = [
  "pydantic==2.12.5",
  "openai==2.15.0",
  "jinja2==3.1.6",
  "transformers==4.57.6",
  "scikit-learn==1.8.0",
  "tritonclient[grpc]==2.41.1",
  "gector @ git+https://github.com/rayliuca/gector@3cfc27dcacfe6ac9ec137fba67dcd777736a96d7",
  "fastapi==0.128.0",
  "errant==3.0.0",
  "uvicorn==0.40.0",
  "grpcio==1.67.1",
  "grpcio-tools==1.62.3",
  "protobuf==4.25.8",
  "numpy==1.26.4"
]

triton = [
  "transformers[torch]>=4.30.0",
  "optimum[onnxruntime-gpu]",
  "bitsandbytes",
  "accelerate",
  "optimum[onnxruntime]",
  "onnxruntime",
  "onnx"
]

dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "pre-commit>=3.0.0",
]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "requests>=2.28.0",
]
all = [
  "grammared-language[triton,dev,test]"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grammared_language*"]

[tool.setuptools.package-data]
grammared_language = [
  "triton/builder/triton_templates/*.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-v"]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require services (gRPC, API)",
    "functional: Functional tests for Triton models",
    "slow: Tests that take a long time to run",
    "requires_triton: Tests that require Triton server",
    "requires_grpc: Tests that require gRPC server",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.uv.sources]
gector = { git = "https://github.com/rayliuca/gector" }
torch = [
    { index = "torch-cpu", marker = "extra != 'gpu'" },
    { index = "cuda-128", marker = "extra == 'gpu'" },
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"
default = true

[[tool.uv.index]]
name = "cuda-128"
url = "https://download.pytorch.org/whl/cu128"